          (i.e. $result->set_from_related($custom_rel, $foreign_result_object)
        - When in a transaction, DBIC::Ordered now seamlesly handles result
          objects that went out of sync with the storage (RT#96499)
        - CDBICompat::columns() now supports adding columns through supplied
          Class::DBI::Column instances (GH#52)

    * Fixes
        - Fix Resultset delete/update affecting *THE ENTIRE TABLE* in cases
          of empty (due to conditions) resultsets with multi-column keys
        - Fix on_connect_* not always firing in some cases - a race condition
          existed between storage accessor setters and the determine_driver
          routines, triggering a connection before the set-cycle is finished
        - Fix collapse being ignored on single-origin selection (RT#95658)
        - Fix incorrect behavior on custom result_class inflators altering
          the amount of returned results
        - Fix failure to detect stable order criteria when in iterator
          mode of a has_many prefetch off a search_related chain
        - Prevent erroneous database hit when accessing prefetched related
          resultsets with no rows
        - Proper exceptions on malformed relationship conditions (RT#92234)
        - Fix incorrect handling of custom relationship conditions returning
          SQLA literal expressions
        - Fix long standing bug with populate() missing data from hashrefs with
          different keysets: http://is.gd/2011_dbic_populate_gotcha (RT#92723)
        - Fix multi-value literal populate not working with simplified bind
          specifications
        - Massively improve the implied resultset condition parsing - now all
          applicable conditions within a resultset should be properly picked
          up by create() and populate()
        - Ensure definitive condition extractor handles bizarre corner cases
          without bombing out (RT#93244)