@@ -4,9 +4,12 @@ use warnings;
 use Test::More;
 use lib qw(t/lib);
 use DBICTest ':DiffSQL';
+use DBIx::Class::_Util 'sigwarn_silencer';
 
 use DBIx::Class::SQLMaker;
 my $sa = DBIx::Class::SQLMaker->new;
+
+$SIG{__WARN__} = sigwarn_silencer( qr/\Q{from} structures with conditions not conforming to the SQL::Abstract syntax are deprecated/ );
 
 my @j = (
     { child => 'person' },
